--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,44 @@
   <modules>
     <module>RemoteDiaryEnterpriseApp-ear</module>
     <module>RemoteDiaryModel</module>
+    <module>RemoteDiaryLogic</module>
+    <module>RemoteDiaryWebTier</module>
   </modules>
+  <build>
+  	<pluginManagement>
+  		<plugins>
+  			<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+  			<plugin>
+  				<groupId>org.eclipse.m2e</groupId>
+  				<artifactId>lifecycle-mapping</artifactId>
+  				<version>1.0.0</version>
+  				<configuration>
+  					<lifecycleMappingMetadata>
+  						<pluginExecutions>
+  							<pluginExecution>
+  								<pluginExecutionFilter>
+  									<groupId>
+  										org.apache.maven.plugins
+  									</groupId>
+  									<artifactId>
+  										maven-dependency-plugin
+  									</artifactId>
+  									<versionRange>
+  										[2.1,)
+  									</versionRange>
+  									<goals>
+  										<goal>copy</goal>
+  									</goals>
+  								</pluginExecutionFilter>
+  								<action>
+  									<ignore/>
+  								</action>
+  							</pluginExecution>
+  						</pluginExecutions>
+  					</lifecycleMappingMetadata>
+  				</configuration>
+  			</plugin>
+  		</plugins>
+  	</pluginManagement>
+  </build>
 </project>
